<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SouthParkActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">

            <ImageButton
                style="@style/btn_style"
                android:contentDescription="@string/timmy"
                android:text="@string/timmy"
                android:src="@drawable/timmy"
                android:id="@+id/btn_timmy"
                android:layout_column="0" />

            <ImageButton
                style="@style/btn_style"
                android:contentDescription="@string/mresclave"
                android:text="@string/mresclave"
                android:src="@drawable/mresclave"
                android:id="@+id/btn_mresclave"
                android:layout_column="1" />

            <ImageButton
                style="@style/btn_style"
                android:contentDescription="@string/garrison"
                android:text="@string/garrison"
                android:src="@drawable/mrgarrison"
                android:id="@+id/btn_garrison"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">

            <ImageButton
                style="@style/btn_style"
                android:contentDescription="@string/lorde"
                android:text="@string/lorde"
                android:src="@drawable/lorde"
                android:id="@+id/btn_lorde"
                android:layout_column="0" />


        </TableRow>
    </TableLayout>
</ScrollView>